feat:github integration 😼
